# Sports-Odds-Trading-Workbench

./: .gitignore  CMakeLists.txt  CMakeProperties.json  README.md  test.cpp
Data Scraping in Python/: Untitled.ipynb  january_2025_events.parquet
Data Scraping in Python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: CMakeLists.txt
tests/: CMakeLists.txt
